--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.6.11",
+    "@astrojs/tailwind": "^3.0.0",
+    "astro": "^2.0.2",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
