--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@example/basics",
+  "name": "",
   "type": "module",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.6.11",
-    "tailwindcss": "^3.2.4"
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^3.0.8",
+    "tailwindcss": "^3.0.24"
   }
 }
