--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "astro": "^5.13.2",
     "sharp": "^0.34.2",
     "tailwindcss": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "typescript": "^5.9.2"
   }
 }
