--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.0",
     "@tailwindcss/vite": "^4.1.12",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.13.2",
     "sharp": "^0.34.2",
     "tailwindcss": "^4.1.12"
