--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.0",
+    "@astrojs/solid-js": "^5.1.0",
     "@tailwindcss/vite": "^4.1.12",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.13.2",
     "sharp": "^0.34.2",
+    "solid-js": "^1.9.9",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
